Minor cleanup.
Signed-off-by: Jeff Schmidt <jeffrey.schmidt@swirldslabs.com>